commit translated contents

--- a/articles/expressroute/index.yml
+++ b/articles/expressroute/index.yml
@@ -11,10 +11,10 @@ metadata:
   ms.author: cherylmc
   ms.date: 08/27/2019
   ms.openlocfilehash: 262043a70bb155c57c9e8ed1f9c0ba614fe0ecdc
-  ms.sourcegitcommit: c31dbf646682c0f9d731f8df8cfd43d36a041f85
+  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/27/2019
+  ms.lasthandoff: 03/25/2020
   ms.locfileid: "74561785"
 landingContent:
 - title: 关于 ExpressRoute
@@ -111,7 +111,7 @@ landingContent:
     links:
     - text: 配置 Global Reach
       url: expressroute-howto-set-global-reach.md
-- title: 引用
+- title: 参考
   linkLists:
   - linkListType: reference
     links:
