--- a/articles/governance/index.yml
+++ b/articles/governance/index.yml
@@ -10,13 +10,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 09/10/2019
-  ms.openlocfilehash: 7090c0814e91b2178dea44eed4d28e6f4e80bd77
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.date: 03/24/2020
+  ms.openlocfilehash: 2df970e3aa36f69dc6f2d990ee307db6536a8ac9
+  ms.sourcegitcommit: c2065e6f0ee0919d36554116432241760de43ec8
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "77470610"
+  ms.lasthandoff: 03/26/2020
+  ms.locfileid: "80282029"
 highlightedContent:
   items:
   - title: 治理概述
@@ -113,6 +113,8 @@ additionalContent:
         url: /dotnet/api/overview/azure/managementgroups
       - text: 用于 Node 的 Azure SDK
         url: /javascript/api/@azure/arm-managementgroups/managementgroups
+      - text: REST
+        url: /rest/api/resources/managementgroups
     - title: Azure Policy
       links:
       - text: Azure CLI
@@ -126,12 +128,6 @@ additionalContent:
       - text: Azure PowerShell
         url: https://www.powershellgallery.com/packages/Az.GuestConfiguration
         note: （来宾配置）
-      - text: 用于 .NET 的 Azure SDK
-        url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policyassignment
-        note: （分配）
-      - text: 用于 .NET 的 Azure SDK
-        url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policydefinition
-        note: （策略定义）
       - text: REST
         url: /rest/api/policy-insights/
         note: （策略见解）
@@ -149,6 +145,22 @@ additionalContent:
         note: （来宾配置）
       - text: 资源管理器模板
         url: /azure/templates/microsoft.authorization/allversions
+    - title: Azure Policy（更多）
+      links:
+      - text: 用于 .NET 的 Azure SDK
+        url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policyassignment
+        note: （分配）
+      - text: 用于 .NET 的 Azure SDK
+        url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policydefinition
+        note: （策略定义）
+      - text: 用于 Node 的 Azure SDK
+        url: /javascript/api/@azure/arm-policy
+        note: （策略）
+      - text: 用于 Node 的 Azure SDK
+        url: /javascript/api/@azure/arm-policyinsights
+        note: （策略见解）
+      - text: 用于 Python 的 Azure SDK
+        url: /python/api/azure-mgmt-policyinsights/azure.mgmt.policyinsights
     - title: Azure 蓝图
       links:
       - text: 蓝图函数
