--- a/articles/cognitive-services/Bing-Web-Search/index.yml
+++ b/articles/cognitive-services/Bing-Web-Search/index.yml
@@ -14,12 +14,12 @@ metadata:
   author: aahill
   ms.author: aahi
   ms.date: 11/06/2019
-  ms.openlocfilehash: 20cabf29f6b7a7a77a54b0bac6188b070eb5cb0c
-  ms.sourcegitcommit: c2065e6f0ee0919d36554116432241760de43ec8
+  ms.openlocfilehash: 437c23bd99e3b0ee5ff366d279e10c3eb1a73bac
+  ms.sourcegitcommit: 980c3d827cc0f25b94b1eb93fd3d9041f3593036
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/26/2020
-  ms.locfileid: "80283695"
+  ms.lasthandoff: 04/02/2020
+  ms.locfileid: "80549130"
 highlightedContent:
   items:
   - title: 比较必应搜索 API
@@ -162,16 +162,16 @@ conceptualContent:
     links:
     - text: 使用 C#
       itemType: quickstart
-      url: ../bing-visual-search/visual-search-sdk-c-sharp.md
+      url: ../bing-visual-search/quickstarts/client-libraries.md?pivots=programming-language-csharp
     - text: 使用 Java
       itemType: quickstart
-      url: ../bing-visual-search/visual-search-sdk-java.md
-    - text: 使用 Node.js
+      url: ../bing-visual-search/quickstarts/client-libraries.md?pivots=programming-language-java
+    - text: 使用 JavaScript
       itemType: quickstart
-      url: ../bing-visual-search/visual-search-sdk-node.md
+      url: ../bing-visual-search/quickstarts/client-libraries.md?pivots=programming-language-javascript
     - text: 使用 Python
       itemType: quickstart
-      url: ../bing-visual-search/visual-search-sdk-python.md
+      url: ../bing-visual-search/quickstarts/client-libraries.md?pivots=programming-language-python
     - text: 裁剪和搜索图像区域
       itemType: tutorial
       url: ../bing-visual-search/tutorial-visual-search-crop-area-results.md
