--- a/articles/dev-spaces/toc.yml
+++ b/articles/dev-spaces/toc.yml
@@ -3,7 +3,7 @@
   items:
     - name: 概述
       items:
-        - name: 关于 Azure Dev Spaces
+        - name: Azure Dev Spaces 是什么？
           href: about.md
     - name: 快速入门
       items:
@@ -113,7 +113,7 @@
           href: how-to/connect.md
         - name: 配置 AKS Dev Spaces 群集以使用 Helm 3（预览版）
           href: how-to/helm-3.md
-    - name: 故障排除
+    - name: 疑难解答
       href: troubleshooting.md
     - name: 常见问题解答
       href: faq.md
