--- a/articles/media-services/video-indexer/toc.yml
+++ b/articles/media-services/video-indexer/toc.yml
@@ -111,3 +111,5 @@
       href: release-notes.md
     - name: 用户之声
       href: 'https://cognitive.uservoice.com/forums/598144-video-indexer'
+    - name: 博客
+      href: 'https://azure.microsoft.com/blog/tag/video-indexer/'
