--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -197,7 +197,7 @@
         - name: 迁移指导
           href: migrate-from-v2-to-v3.md
           displayName: naming
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 入门
       items:
@@ -334,7 +334,7 @@
           href: download-results-howto.md
         - name: 表示描述性音频
           href: signal-descriptive-audio-howto.md
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 常见问题
           displayName: faqs
