--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 015631efc0077bdaab9a335b4a38fbf4f927e22d
-  ms.sourcegitcommit: c2065e6f0ee0919d36554116432241760de43ec8
+  ms.openlocfilehash: 70f6725985a851b4c96ce08f15c33587f6cad5a9
+  ms.sourcegitcommit: 7581df526837b1484de136cf6ae1560c21bf7e73
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/26/2020
-  ms.locfileid: "80286007"
+  ms.lasthandoff: 03/31/2020
+  ms.locfileid: "80422376"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -600,7 +600,7 @@ productDirectory:
     - databases
     - migration
     url: dms/index.yml
-  - title: Azure SQL 数据库
+  - title: Azure SQL Database
     summary: 云中托管的智能 SQL
     imageSrc: https://static.docs.com/ui/media/product/azure/sql-database.svg
     azureCategories:
@@ -973,7 +973,7 @@ productDirectory:
     imageSrc: https://static.docs.com/ui/media/product/azure/scheduler.svg
     azureCategories:
     - management-and-governance
-    url: scheduler/index.md
+    url: scheduler/index.yml
   - title: 流量管理器
     summary: 根据高性能和高可用性要求路由传入流量
     imageSrc: https://static.docs.com/ui/media/product/azure/traffic-manager.svg
